--- a/WpfOpgave/MainWindow.xaml
+++ b/WpfOpgave/MainWindow.xaml
@@ -6,7 +6,6 @@
         xmlns:local="clr-namespace:WpfOpgave"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    
+    <ContentControl Content="{Binding ViewModel}" />
 </Window>
